Outliner: wrong tooltip for moving collections #84953

Closed
opened 2021-01-22 07:29:52 +01:00 by Georg K · 11 comments

System Information
Operating system: Linux-5.10.2-2-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: AMD VERDE (DRM 2.50.0, 5.10.2-2-MANJARO, LLVM 11.0.0) AMD 4.5 (Core Profile) Mesa 20.3.1

Blender Version
Broken: version: 2.92.0 Alpha, branch: lanpr-under-gp, commit date: 2020-12-21 07:43, hash: c5a59fba58
Worked: (newest version of Blender that worked as expected)

Short description of error
There is a text appearing over the cursor if you try to move a collection in the Outliner. In Scenes mode, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it (like moving objects between collections). Additionally, when moving a collection in View Layer mode "Move inside collection (Ctrl to link, Shift to parent) is displayed although Shift does not to work or make much sense".
So in both cases, the help texts are wrong and should be like "Move inside collection (Ctrl to link)".

Exact steps for others to reproduce the error
Create a new scene. In the Outliner, switch to Scenes mode and View Layer mode and try moving a collection in each mode.

**System Information** Operating system: Linux-5.10.2-2-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: AMD VERDE (DRM 2.50.0, 5.10.2-2-MANJARO, LLVM 11.0.0) AMD 4.5 (Core Profile) Mesa 20.3.1 **Blender Version** Broken: version: 2.92.0 Alpha, branch: lanpr-under-gp, commit date: 2020-12-21 07:43, hash: `c5a59fba58` Worked: (newest version of Blender that worked as expected) **Short description of error** There is a text appearing over the cursor if you try to move a collection in the Outliner. In Scenes mode, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it (like moving objects between collections). Additionally, when moving a collection in View Layer mode "Move inside collection (Ctrl to link, Shift to parent) is displayed although Shift does not to work or make much sense". So in both cases, the help texts are wrong and should be like "Move inside collection (Ctrl to link)". **Exact steps for others to reproduce the error** Create a new scene. In the Outliner, switch to Scenes mode and View Layer mode and try moving a collection in each mode.
Author

Added subscriber: @georgK

Added subscriber: @georgK
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-01-22 14:55:38 +01:00
Member

This makes sense for objects, for collections, this could be improved ,yes.

This makes sense for objects, for collections, this could be improved ,yes.
Philipp Oeser removed their assignment 2021-01-29 16:35:56 +01:00
Hans Goudey was assigned by Philipp Oeser 2021-01-29 16:35:56 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

@HooglyBoogly : thx for D10203.

Think it makes sense for you to take over then.

@HooglyBoogly : thx for [D10203](https://archive.blender.org/developer/D10203). Think it makes sense for you to take over then.
Member

@lichtwerk Ah sorry, didn't notice that you had claimed this!

@lichtwerk Ah sorry, didn't notice that you had claimed this!

This issue was referenced by 81e795e7f0

This issue was referenced by 81e795e7f011e7746b969c877cfaaeeab100883a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Sorry, it is not fixed completely, retesting in version: 2.93.0 Alpha, branch: master, commit date: 2021-03-04 19:20, hash: 1668f883fb shows that the following problem is still present:
If you switch the Outliner to Scenes mode and drag a collection to another collection, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it.

Sorry, it is not fixed completely, retesting in version: 2.93.0 Alpha, branch: master, commit date: 2021-03-04 19:20, hash: `1668f883fb` shows that the following problem is still present: If you switch the Outliner to Scenes mode and drag a collection to another collection, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it.
Member

If you switch the Outliner to Scenes mode and drag a collection to another collection, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it.

This seems resolved in master and 2.93

> If you switch the Outliner to Scenes mode and drag a collection to another collection, "Link inside Collection" is displayed but in reality, the collection is moved and you have to press Ctrl to link it. This seems resolved in master and 2.93
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84953
No description provided.